@@ -168,7 +168,7 @@ public class ServiceOfApplicationService {
 
     @Autowired
     @Qualifier("caseSummaryTab")
-    private CaseSummaryTabService caseSummaryTabService;
+    private final CaseSummaryTabService caseSummaryTabService;
 
     @Autowired
     private final ObjectMapper objectMapper;
@@ -277,7 +277,7 @@ public class ServiceOfApplicationService {
         throws Exception {
         List<Element<EmailNotificationDetails>> emailNotificationDetails = new ArrayList<>();
         List<Element<BulkPrintDetails>> bulkPrintDetails = new ArrayList<>();
-        String whoIsResponsibleForServing = COURT;
+        String whoIsResponsibleForServing;
         if (CaseCreatedBy.CITIZEN.equals(caseData.getCaseCreatedBy())) {
             whoIsResponsibleForServing = handleNotificationsForCitizenCreatedCase(caseData, authorization,
                                                                                   emailNotificationDetails, bulkPrintDetails);
@@ -302,7 +302,7 @@ public class ServiceOfApplicationService {
         }
         List<Document> docsForLa = getDocsToBeServedToLa(authorization, caseData);
         log.info("Sending notifiction to LA");
-        if (null != docsForLa) {
+        if (!docsForLa.isEmpty()) {
             try {
                 emailNotificationDetails.add(element(serviceOfApplicationEmailService
                                                          .sendEmailNotificationToLocalAuthority(authorization,
@@ -330,11 +330,10 @@ public class ServiceOfApplicationService {
                                                           List<Element<EmailNotificationDetails>> emailNotificationDetails,
                                                           List<Element<BulkPrintDetails>> bulkPrintDetails) {
         //CITIZEN SCENARIO
-        String whoIsResponsibleForServing = "";
+        String whoIsResponsibleForServing = COURT;
         List<Document> c100StaticDocs = serviceOfApplicationPostService.getStaticDocs(authorization, CaseUtils.getCaseTypeOfApplication(caseData));
         if (PrlAppsConstants.C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))) {
             log.info("Sending service of application notifications to C100 citizens");
-            //serviceOfApplicationEmailService.sendEmailToC100Applicants(caseData);
             if (YesOrNo.No.equals(caseData.getServiceOfApplication().getSoaServeToRespondentOptions())
                 && (caseData.getServiceOfApplication().getSoaRecipientsOptions() != null)
                 && (!caseData.getServiceOfApplication().getSoaRecipientsOptions().getValue().isEmpty())) {
@@ -355,8 +354,8 @@ public class ServiceOfApplicationService {
         } else {
             if (SoaCitizenServingRespondentsEnum.unrepresentedApplicant
                 .equals(caseData.getServiceOfApplication().getSoaCitizenServingRespondentsOptionsDA())) {
-                List<Document> packEdocs = getNotificationPack(caseData, PrlAppsConstants.E, c100StaticDocs);
-                List<Document> packFdocs = getNotificationPack(caseData, PrlAppsConstants.F, c100StaticDocs);
+                getNotificationPack(caseData, PrlAppsConstants.E, c100StaticDocs);
+                getNotificationPack(caseData, PrlAppsConstants.F, c100StaticDocs);
                 Element<PartyDetails> applicant = Element.<PartyDetails>builder()
                     .id(caseData.getApplicantsFL401().getPartyId())
                     .value(caseData.getApplicantsFL401())
@@ -368,8 +367,8 @@ public class ServiceOfApplicationService {
                     generateAccessCodeLetter(authorization, caseData, applicant,caseInvite,Templates.PRL_LET_ENG_FL401_RE3);
                 }
             } else {
-                List<Document> packCdocs = getNotificationPack(caseData, PrlAppsConstants.C, c100StaticDocs);
-                List<Document> packDdocs = getNotificationPack(caseData, PrlAppsConstants.D, c100StaticDocs);
+                getNotificationPack(caseData, PrlAppsConstants.C, c100StaticDocs);
+                getNotificationPack(caseData, PrlAppsConstants.D, c100StaticDocs);
             }
             log.info("#SOA TO DO ... FL401 citizen created case");
         }
@@ -418,7 +417,7 @@ public class ServiceOfApplicationService {
                 || SoaSolicitorServingRespondentsEnum.courtAdmin
                 .equals(caseData.getServiceOfApplication().getSoaServingRespondentsOptionsCA())) {
                 log.error("#SOA TO DO ... generate J K packs to serve by courtadmin/bailiff");
-                List<Document> packJkDocs = getNotificationPack(caseData, PrlAppsConstants.H, c100StaticDocs);
+                getNotificationPack(caseData, PrlAppsConstants.H, c100StaticDocs);
             }
         } else if (YesOrNo.No.equals(caseData.getServiceOfApplication().getSoaServeToRespondentOptions())
             && (caseData.getServiceOfApplication().getSoaRecipientsOptions() != null)
@@ -427,7 +426,7 @@ public class ServiceOfApplicationService {
             c100StaticDocs = c100StaticDocs.stream().filter(d -> ! d.getDocumentFileName().equalsIgnoreCase(
                 C9_DOCUMENT_FILENAME)).collect(
                 Collectors.toList());
-            log.info("serving applicants or respondents");
+            log.info("serving applicants or respondents non personal");
             List<DynamicMultiselectListElement> selectedApplicants = getSelectedApplicantsOrRespondents(
                 caseData.getApplicants(),
                 caseData.getServiceOfApplication().getSoaRecipientsOptions().getValue()
@@ -473,7 +472,7 @@ public class ServiceOfApplicationService {
 
     private String handleNotificationsDaSolicitorCreatedCase(CaseData caseData, String authorization,
                                                            List<Element<EmailNotificationDetails>> emailNotificationDetails) {
-        String whoIsResponsibleForServing;
+        String whoIsResponsibleForServing = COURT;
         List<Document> staticDocs = serviceOfApplicationPostService.getStaticDocs(authorization, CaseUtils.getCaseTypeOfApplication(caseData));
 
 
@@ -547,8 +546,7 @@ public class ServiceOfApplicationService {
         );
         log.info("*** Selected respondents *** {}", selectedRespondents);
         log.info("*** Selected applicants *** {}", selectedApplicants);
-        if (selectedApplicants != null
-            && selectedApplicants.size() > 0) {
+        if (CollectionUtils.isNotEmpty(selectedApplicants)) {
             emailNotificationDetails
                 .addAll(sendNotificationsToCitizenApplicantsC100(
                     authorization, selectedApplicants,
@@ -560,8 +558,7 @@ public class ServiceOfApplicationService {
         log.info(" ** emailnotification {}", emailNotificationDetails);
         log.info(" ** bulk print details {}", bulkPrintDetails);
 
-        if (selectedRespondents != null
-            && selectedRespondents.size() > 0) {
+        if (CollectionUtils.isNotEmpty(selectedRespondents)) {
             emailNotificationDetails
                 .addAll(sendNotificationsToCitizenRespondentsC100(authorization, selectedRespondents,
                                                                   caseData, bulkPrintDetails, c100StaticDocs, true));
@@ -574,8 +571,8 @@ public class ServiceOfApplicationService {
                                                         List<Document> c100StaticDocs) {
         if (SoaCitizenServingRespondentsEnum.unrepresentedApplicant
             .equals(caseData.getServiceOfApplication().getSoaCitizenServingRespondentsOptionsCA())) {
-            List<Document> packLdocs = getNotificationPack(caseData, PrlAppsConstants.L, c100StaticDocs);
-            List<Document> packMdocs = getNotificationPack(caseData, PrlAppsConstants.M, c100StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.L, c100StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.M, c100StaticDocs);
             for (Element<PartyDetails> applicant : caseData.getApplicants()) {
                 if (!YesNoDontKnow.yes.equals(applicant.getValue().getDoTheyHaveLegalRepresentation())) {
                     sendPostWithAccessCodeLetterToParty(caseData, authorization, new ArrayList<>(), bulkPrintDetails,
@@ -590,9 +587,10 @@ public class ServiceOfApplicationService {
                 }
             }
         } else {
-            List<Document> packJdocs = getNotificationPack(caseData, PrlAppsConstants.J, c100StaticDocs);
-            List<Document> packKdocs = getNotificationPack(caseData, PrlAppsConstants.K, c100StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.J, c100StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.K, c100StaticDocs);
         }
+        log.info(" {}", emailNotificationDetails);
     }
 
     public Map<String, Object> handleAboutToSubmit(CallbackRequest callbackRequest) throws Exception {
@@ -609,7 +607,6 @@ public class ServiceOfApplicationService {
         }
 
         caseDataMap.put(CASE_INVITES, generateCaseInvitesForParties(caseData));
-        //cleanUpSoaSelections(caseDataMap, true);
         return caseDataMap;
     }
 
@@ -1136,8 +1133,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getSoaSelectedOrders(caseData));
         // Annex Y to be excluded
         docs.addAll(staticDocs.stream()
-                        .filter(d -> !d.getDocumentFileName().equalsIgnoreCase(SOA_C9_PERSONAL_SERVICE_FILENAME))
-                        .collect(Collectors.toList()));
+                        .filter(d -> !d.getDocumentFileName().equalsIgnoreCase(SOA_C9_PERSONAL_SERVICE_FILENAME)).toList());
         return docs;
     }
 
@@ -1146,6 +1142,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getCaseDocs(caseData));
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getSoaSelectedOrders(caseData));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1154,12 +1151,14 @@ public class ServiceOfApplicationService {
         docs.addAll(getCaseDocs(caseData));
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getNonC6aOrders(getSoaSelectedOrders(caseData)));
+        log.info("{}",staticDocs);
         return docs;
     }
 
     private List<Document> generatePackN(CaseData caseData, List<Document> staticDocs) {
         List<Document> docs = new ArrayList<>();
         docs.addAll(getC6aIfPresent(getSoaSelectedOrders(caseData)));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1178,6 +1177,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getCaseDocs(caseData));
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getSoaSelectedOrders(caseData));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1186,6 +1186,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getCaseDocs(caseData));
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getSoaSelectedOrders(caseData));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1294,6 +1295,7 @@ public class ServiceOfApplicationService {
         docs.addAll(getCaseDocs(caseData));
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getSoaSelectedOrders(caseData));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1303,6 +1305,7 @@ public class ServiceOfApplicationService {
         docs.add(caseData.getC8Document());
         docs.addAll(getDocumentsUploadedInServiceOfApplication(caseData));
         docs.addAll(getSoaSelectedOrders(caseData));
+        log.info("{}",staticDocs);
         return docs;
     }
 
@@ -1630,9 +1633,7 @@ public class ServiceOfApplicationService {
         List<Element<CaseInvite>> caseInvites = caseData.getCaseInvites();
         if (caseInvites != null) {
             if (C100_CASE_TYPE.equalsIgnoreCase(CaseUtils.getCaseTypeOfApplication(caseData))) {
-                caseData.getApplicants().forEach(party -> {
-                    caseInvites.add(element(c100CaseInviteService.generateCaseInvite(party, Yes)));
-                });
+                caseData.getApplicants().forEach(party -> caseInvites.add(element(c100CaseInviteService.generateCaseInvite(party, Yes))));
                 caseData.getRespondents().forEach(party -> caseInvites.add(element(c100CaseInviteService.generateCaseInvite(party, No))));
             } else {
                 caseInvites.add(element(fl401CaseInviteService.generateCaseInvite(caseData.getApplicantsFL401(), Yes)));
@@ -1725,14 +1726,14 @@ public class ServiceOfApplicationService {
             || SoaCitizenServingRespondentsEnum.courtAdmin
                 .equals(caseData.getServiceOfApplication().getSoaCitizenServingRespondentsOptionsCA())) {
             log.error("#SOA TO DO... Personal courtadmin / court bailiff - case created by- citizen/solicitor");
-            List<Document> packCDocs = getNotificationPack(caseData, PrlAppsConstants.C, fl401StaticDocs);
-            List<Document> packDDocs = getNotificationPack(caseData, PrlAppsConstants.D, fl401StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.C, fl401StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.D, fl401StaticDocs);
 
         } else if (SoaCitizenServingRespondentsEnum.unrepresentedApplicant
             .equals(caseData.getServiceOfApplication().getSoaCitizenServingRespondentsOptionsCA())) {
             log.error("#SOA TO DO... Personal courtadmin / court bailiff - case created by- citizen/solicitor");
-            List<Document> packEDocs = getNotificationPack(caseData, PrlAppsConstants.E, fl401StaticDocs);
-            List<Document> packFDocs = getNotificationPack(caseData, PrlAppsConstants.F, fl401StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.E, fl401StaticDocs);
+            getNotificationPack(caseData, PrlAppsConstants.F, fl401StaticDocs);
         }
         return caseDataUpdated;
     }
